Fix universal binary build

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ xcuserdata/
 
 # `go build` output
 HTMLConverter/htmlconverter.a
-HTMLConverter/htmlconverter.h
+HTMLConverter/htmlconverter-*.a
+HTMLConverter/htmlconverter-*.h
