--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
-name: Xcode - Build and Analyze
+name: Xcode - Build and Archive
 
 on:
   workflow_dispatch
 
 jobs:
   build:
-    name: Build and analyse default scheme using xcodebuild command
+    name: Build and archive default scheme using xcodebuild command
     runs-on: macos-latest
 
     steps:
@@ -25,4 +25,8 @@ jobs:
           if [ $scheme = default ]; then scheme=$(cat default); fi
           if [ "`ls -A | grep -i \\.xcworkspace\$`" ]; then filetype_parameter="workspace" && file_to_build="`ls -A | grep -i \\.xcworkspace\$`"; else filetype_parameter="project" && file_to_build="`ls -A | grep -i \\.xcodeproj\$`"; fi
           file_to_build=`echo $file_to_build | awk '{$1=$1;print}'`
-          xcodebuild clean build analyze -scheme "$scheme" -"$filetype_parameter" "$file_to_build" CODE_SIGNING_ALLOWED=NO
+          xcodebuild clean archive -archivePath Glance.xcarchive -scheme "$scheme" -"$filetype_parameter" "$file_to_build" CODE_SIGNING_ALLOWED=NO
+      - uses: actions/upload-artifact@v3
+        with:
+          name: Glance.xcarchive
+          path: Glance.xcarchive
